# tescore-v1

./: .gitignore  CMakeLists.txt  README.md  TODO  Tescore  demo.txt  main.c
gaNewBuild/: CMakeCache.txt  Makefile  Tescore  cmake_install.cmake
include/: lemao.h
include/io/: crud.c  decrypt.c  encrypt.c  fileops.c  io.h  main.c
include/io/legacy/: legacy_crud.c
include/io/lib/: aes.c  aes.h
include/io/safeguard/: docs_safeguardctx.txt  safeguard.c  safeguard.h
include/io/safeguard/legacy/: legacy_safeguard.c
include/model/: Sheetctx.h  datamodel.h  datasheet.h  index.h  models.h  renderctx.h  safeguard.h  sheet.h  subsheet.h
include/proc/: proc.h
include/proc/masterlist/: alphaMergeSort.c
include/proc/masterlist/legacy/: alphaMergeSort.h  alphabeticallySort.c  alphabeticallySort.h  strec.h  tests_alphasortmodule.c  tests_alphasortmodule2.c
include/proc/ranker/: ranker.c
include/proc/ranker/legacy/: Students.txt  main_copy.c  rankerModule.h
include/proc/search/: countScores.c  countScores.h  main.c
include/render/: render.h
include/render/navigation/: docs_navigation.txt  navigation.c  navigation.h
include/render/view/: auth.c  docs_render.txt  render.c  render.h  typeface.c  typeface.h
include/render/view/docs/: docs_render.txt
include/sort/masterlist/: a.out  alphaMergeSort.c  alphaMergeSort.h  alphabeticallySort.c  alphabeticallySort.h  main.c  strec.h  tests_alphasortmodule.c
include/sort/ranker/: Temp.c  main copy.c  main_copy.c  module.c  rankerModule.h
include/sort/search/: a.out  countScores.c  countScores.h  main.c
include/utils/: cmdlog.c  cmdlog.h
